# FANS

./: .clang-format  .cmake-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  Doxyfile  FANSConfig.cmake  README.md  compiling_new.md  micro-manager-config.json  paper.bib  pixi.toml
.github/workflows/: build.sh  build.yaml  build_and_package.yaml  build_and_test-mac.yaml  build_and_test.yaml  build_and_test_mac.yaml  ci-linux.sh  ci.yaml  clang-format-check.yml  code-style.yml  dev_build.yaml  docker.yaml  docker_helpers.yaml  joss_build.yaml  pixi_build.yaml  pixi_build_mac.yaml  run-checks.yml  test_pyfans.yaml
AiiDA-FANS/: pyproject.toml  requirements.txt  tutorial_dataset.h5
FANS_Dashboard/: FANS_Dashboard.ipynb  FANS_Dashboard_utils.py  PlotYoungsModulus.py  README.md  h52xdmf.py  plotting.py  postprocessing.py  pyproject.toml
FANS_Dashboard/fans_dashboard/core/: tensortools.py  utils.py
FANS_Dashboard/fans_dashboard/plotting/: PlotYoungsModulus.py  h52xdmf.py  plotting.py
cmake/: FANSConfig.cmake.in  LeakSanitizer_suppressions.txt
cmake/modules/: FindFFTW3.cmake
cmake/packaging/: CMakeLists.txt
docker/: Dockerfile  Dockerfile_user_env_entrypoint.sh  README.md
docs/: CODE_OF_CONDUCT.md  ReleaseGuide.md
include/: LargeStrainMechModel.h  MaterialManager.h  general.h  json.hpp  logging.h  matmodel.h  micro.hpp  mixedBCs.h  reader.h  serialization.h  setup.h  solver.h  solverCG.h  solverFP.h  version.h.in
include/material_models/: CompressibleNeoHookean.h  GBDiffusion.h  J2Plasticity.h  J2PlasticityNew.h  LinearElastic.h  LinearElasticIsotropic.h  LinearThermal.h  LinearThermalIsotropic.h  PseudoPlastic.h  PseudoPlasticLinearHardening.h  RateIndependentJ2Plasticity.h  SaintVenantKirchhoff.h  VonMisesPlasticLinearIsotropicHardening.h
joss/: paper.md
micro_manager/: micro-manager-config.json  micro.cpp  micro.hpp
packaging/: CMakeLists.txt
pyfans/: CMakeLists.txt  README.md  micro.cpp  micro.hpp  pixi.toml  pyproject.toml
python/: CMakeLists.txt  micro.cpp  micro.hpp  micro_thermal.cpp  micro_thermal.hpp
src/: logging.cpp  main.cpp  matmodel.cpp  micro.cpp  reader.cpp
test/: .gitignore  CMakeLists.txt  README.md  fans_input.py  h52xdmf.py  input.json  mech_linear.hdf5  micro-manager-config-mech.json  micro-manager-config-thermal.json  micro-manager-config.json  micro_mech.py  run.sh  run_strong_scaling.sh  run_tests.sh  strong_scaling.sh  thermal_linear.hdf5
test/FANS_Dashboard/: FANS_Dashboard.ipynb  FANS_Dashboard_utils.py  postprocessing.py
test/input_files/: 3d0_MFL_0_mech.json  berea128_h5_mech.json  berea128_h5_thermal.json  generate_load_paths.py  sphere256_MechLinear.json  sphere256_linear_elastic.json  sphere32_hyper_elastic.json  sphere_HyperElastic.json  sphere_MechLinear.json  sphere_ThermalLinear.json  sphere_mech.json  test_CompressibleNeoHookean.json  test_HyperElastic.json  test_J2Plasticity.json  test_LinearElastic.json  test_LinearElasticIsotropic.json  test_LinearThermal.json  test_LinearThermalIsotropic.json  test_MechLinear.json  test_MixedBCs.json  test_MixedBCs_LargeStrain.json  test_PseudoPlastic.json  test_PseudoPlasticLinearHardening.json  test_ThermalLinear.json  test_VonMisesPlasticLinearIsotropicHardening.json  test_hyper_elastic.json  test_linear_elastic.json  test_linear_thermal.json
test/input_files/marimo_inputs/: .gitignore  fans_input.py
test/input_files/marimo_inputs/layouts/: fans_input.grid.json
test/layouts/: fans_input.grid.json
test/microstructures/: quick_3Ddataviz.py  sphere.h5  sphere32.h5
test/pytest/: conftest.py  test_displacement_averaging.py  test_homogenization_consistency.py  test_homogenized_tangent_spd.py  test_homogenized_tangent_within_VRbounds.py  test_loading_to_strain_average.py  test_regression.py  test_strain_stress_averaging.py  test_tensortools.py
test/pytests/unit/: test_displacement_averaging.py  test_homogenization_consistency.py  test_homogenized_tangent_spd.py  test_homogenized_tangent_within_VRbounds.py  test_loading_to_strain_average.py  test_strain_stress_averaging.py  test_tensortools.py
test/test_pyfans/: README.md  input.json  macro-cube.py  micro-manager-config.json  precice-config.xml  run_fans_as_library.py
test/unit/: test_displacement_averaging.py  test_homogenization_consistency.py  test_homogenized_tangent_spd.py  test_homogenized_tangent_within_VRbounds.py  test_loading_to_strain_average.py  test_strain_stress_averaging.py
tutorial/: .gitignore  README.md  requirements.txt  tutorial.py
