[project]
name = "aiida-fans-tutorial"
description = "Learn how to use aiida-fans in this marimo powered tutorial."
authors = [{name = "Ethan Shanahan", email = "ethan.shanahan@gmail.com"}]
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.12.10,<4"
marimo = ">=0.13.0,<0.14"
aiida-fans = ">=0.1.5,<0.2"
fans = ">=0.3.0,<0.4"
