[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fans-dashboard"
version         = "0.4.1"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.2.5,<3",
  "h5py>=3.13.0,<4",
  "plotly>=6.0.1,<7",
  "lxml>=5.4.0,<6",
  "nbformat>=5.10.4,<6",
  "matplotlib>=3.10.1,<4",
  "scipy>=1.15.2,<2",
  "meshio>=5.3.5,<6",
  "ipykernel>=6.29.5,<7",
  "nbclient>=0.10.2,<0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["fans_dashboard"]
