[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fans-dashboard"
version         = "0.4.1"
requires-python = ">=3.9"
dependencies = [
  "numpy>=2.2.5,<3",
  "h5py>=3.13.0,<4",
  "plotly>=6.0.1,<7",
  "lxml>=5.4.0,<6",
  "scipy>=1.15.2,<2",
  "meshio>=5.3.5,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["fans_dashboard"]
