[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fans-dashboard"
version         = "0.5.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "h5py",
  "plotly",
  "lxml",
  "scipy",
  "meshio",
  "nbformat",
]

[tool.hatch.build.targets.wheel]
packages = ["fans_dashboard"]
